@@ -1,3 +1,8 @@
+2003-02-19  Mike Kestner  <mkestner@speakeasy.net>
+
+	* generator/GenBase.cs : mark #line 1 for .customs
+	* generator/SignalHandler.cs : fix for GObj retvals
+
 2003-02-18  Mark Crichton  <crichton@gimp.org>
 
 	* generator/EnumGen.cs: Handle different enum types.
